more mem/cpu tweaks